--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <main class="container">
       <div class="card">
         <!-- 1st Section -->
-        <div class="card-section">
+        <div class="card-section box-1">
           <img
             src="./images/icon-sedans.svg"
             alt="Sedans"
@@ -27,13 +27,13 @@
           />
           <h1 class="card-section--heading">Sedans</h1>
           <p class="card-section--description">
-            Choose a sedan for its affordability and excellent fuel economy.
+            Choose a sedan for it's affordability and excellent fuel economy.
             Ideal for cruising in the city or on your next road trip.
           </p>
-          <a href="#" class="card-section--button box-1">Learn More</a>
+          <a href="#" class="card-section--button">Learn More</a>
         </div>
         <!-- 2nd Section -->
-        <div class="card-section">
+        <div class="card-section box-2">
           <img
             src="./images/icon-suvs.svg"
             alt="Sedans"
@@ -44,10 +44,10 @@
             Take an SUV for its spacious interior, power, and versatility.
             Perfect for your next family vacation and off-road adventures.
           </p>
-          <a href="#" class="card-section--button box-1">Learn More</a>
+          <a href="#" class="card-section--button">Learn More</a>
         </div>
         <!-- 3rd Section -->
-        <div class="card-section">
+        <div class="card-section box-3">
           <img
             src="./images/icon-luxury.svg"
             alt="Sedans"
@@ -58,7 +58,7 @@
             Cruise in the best car brands without the bloated prices. Enjoy the
             enhanced comfort of a luxury rental and arrive in style.
           </p>
-          <a href="#" class="card-section--button box-1">Learn More</a>
+          <a href="#" class="card-section--button">Learn More</a>
         </div>
       </div>
     </main>
@@ -68,7 +68,7 @@
         Challenge by
         <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
           >Frontend Mentor</a
-        >. Coded by <a href="#">Your Name Here</a>.
+        >. Coded by <a href="https://madushan.dev">Madushan Sooriyarathne</a>.
       </p>
     </div>
   </body>
